--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/restify-errors": "^4.3.8",
     "bcrypt": "5.1.1",
+    "bunyan": "^1.8.15",
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.1.1",
     "restify": "^11.1.0",
